--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Saúde Fácil - Encontre Medicamentos e Serviços do SUS</title>
+    <meta name="description" content="Facilite o acesso aos medicamentos e serviços do SUS. Encontre disponibilidade em tempo real e economize tempo." />
+    <meta name="author" content="Saúde Fácil" />
   </head>
   <body>
     <div id="root"></div>
